完善API